syntax = "proto3";
package todo.v1;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "v1/todo";
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "TODO API";
    version: "1.0";
    contact: {
      name: "gRPC-Gateway project";
      url: "https://github.com/grpc-ecosystem/grpc-gateway";
      email: "none@example.com";
    };
  };
};

message StringMessage {
  optional int32 id = 1;
  string value = 2;
}

message RepeatedStringMessage {
  repeated string value = 1;
}

message IDRequest {
  int32 id = 1;
}
service YourService {
  rpc CreateTODO(StringMessage) returns (StringMessage) {
    option (google.api.http) = {
      post: "/v1/todo"
      body: "*"
    };
  }
  rpc UpdateTODO(StringMessage) returns (StringMessage) {
    option (google.api.http) = {
      patch: "/v1/todo"
      body: "*"
    };
  }
  rpc GetTODO(IDRequest) returns (StringMessage) {
    option (google.api.http) = {get: "/v1/todo"};
  }
  rpc DeleteTODO(IDRequest) returns (StringMessage) {
    option (google.api.http) = {delete: "/v1/todo"};
  }
  rpc GetAllTODO(IDRequest) returns (RepeatedStringMessage) {
    option (google.api.http) = {get: "/v1/todo/all"};
  }
}
